--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Trigger"
-        android:id="@+id/textView"
+        android:id="@+id/trigger_textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -26,8 +26,8 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_below="@+id/textView"
+        android:id="@+id/trigger_spinner"
+        android:layout_below="@+id/trigger_textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:entries="@array/triggerArray" />
@@ -37,8 +37,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Action"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/spinner"
+        android:id="@+id/action_textView"
+        android:layout_below="@+id/trigger_spinner"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="34dp" />
@@ -46,9 +46,9 @@
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner2"
+        android:id="@+id/action_spinner"
         android:entries="@array/actionArray"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/action_textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Content"
-        android:id="@+id/textView3"
+        android:id="@+id/content_textView"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -67,8 +67,8 @@
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:ems="10"
-        android:id="@+id/editText"
-        android:layout_below="@+id/textView3"
+        android:id="@+id/content_editText"
+        android:layout_below="@+id/content_textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
