made an adapter to dynamically edit list, and made Trigger object to hold all the data from the create window. (When i learn how to save and recall the custom object data we should be able to look into deleting objects from the arraylist and editing objects.)

--- a/app/src/main/res/layout/activity_saved.xml
+++ b/app/src/main/res/layout/activity_saved.xml
@@ -9,7 +9,7 @@
     <ListView
         android:layout_width = "match_parent"
         android:layout_height = "300dp"
-        android:entries="@array/triggerList"
+        android:id="@+id/savedlist"
         android:layout_weight="0.55">
     </ListView>
 
