--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -77,6 +77,18 @@
         android:layout_toRightOf="@+id/save_button"
         android:layout_toEndOf="@+id/save_button"/>
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:id="@+id/gps_location"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:hint="GPS Location"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/action_name"/>
+
     <TimePicker
         android:layout_width="match_parent"
         android:layout_height="135dp"
