--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.danielbedich.trigger.CreateActivity">
+
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +35,7 @@
         android:layout_below="@+id/action_spinner"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="Contact Name"/>
+        android:hint="Contact (Double Click to Select)"/>
     <EditText
         android:inputType="textMultiLine"
         android:layout_width="match_parent"
@@ -84,7 +85,7 @@
         android:id="@+id/gps_location"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:hint="GPS Location"
+        android:hint="Location (Address, City, State)"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/action_name"/>
