--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -23,6 +23,7 @@
             android:layout_weight="1"
             android:layout_margin="10dp"
             android:id="@+id/name"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -30,6 +31,7 @@
             android:layout_weight="1"
             android:layout_margin="10dp"
             android:id="@+id/trigger"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -37,6 +39,7 @@
             android:layout_weight="1"
             android:layout_margin="10dp"
             android:id="@+id/action"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -44,6 +47,7 @@
             android:layout_weight="1"
             android:layout_margin="10dp"
             android:id="@+id/contact"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             />
         <TextView
             android:layout_width="wrap_content"
@@ -51,6 +55,7 @@
             android:layout_weight="1"
             android:layout_margin="10dp"
             android:id="@+id/message"
+            android:textAppearance="?android:attr/textAppearanceLarge"
             />
     </LinearLayout>
     <LinearLayout
