--- a/app/src/main/res/layout/content_trigger.xml
+++ b/app/src/main/res/layout/content_trigger.xml
@@ -23,6 +23,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/new_button" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Change Password"
+            android:id="@+id/changeBtn"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            />
 
     </LinearLayout>
 </LinearLayout>
