--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -67,7 +67,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/back_button"
+        android:id="@+id/backbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/back_button"
@@ -76,7 +76,7 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:id="@+id/edit_button"
+        android:id="@+id/editbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/edit_button"
@@ -88,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DELETE"
-        android:id="@+id/delete_button"
+        android:id="@+id/deletebutton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
